--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
     </script>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-   <amp-img src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Teaser.ashx?h=213&la=en&mw=329&w=320" alt="Welcome" height="400" width="800"></amp-img>
+   <amp-img src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Teaser.ashx" alt="Welcome" height="400" width="800"></amp-img>
   </head>
   <body>
     <h1>I have never ever been sexually attracted to anyone.</h1>
