--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 	The life of an asexual person - Youth.SG
 </title>
 <meta charset="utf-8">
- <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
+<script async src="https://cdn.ampproject.org/v0.js"></script>
+<title>The life of an asexual person</title>
+<link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
+<link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
+<meta charset="utf-8">
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <meta name="description" content="" />
 <meta name="keywords" content="" />
