--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <title>The life of an asexual person</title>
-     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
+    <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
       {
