--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>The life of an asexual person</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
+     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script type="application/ld+json">
       {
         "@context": "https://www.youth.sg",
