--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 
-
-
 <!DOCTYPE html>
 <!--[if IE 7]>         <html class="no-js lt-ie10 lt-ie9 lt-ie8 ie7" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie10 lt-ie9 ie8" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if IE 9]>         <html class="no-js lt-ie10 ie9" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if gt IE 9]><!-->
-<html amp lang="en">
+<html>
 <!--<![endif]-->
 <head><title>
 	The life of an asexual person - Youth.SG
