--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	The life of an asexual person - Youth.SG
 </title>
 <meta charset="utf-8">
-
+<link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
 <title>The life of an asexual person</title>
 <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
 <meta charset="utf-8">
