--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	The life of an asexual person - Youth.SG
 </title>
 <meta charset="utf-8">
+ <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+ <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">  
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <title>The life of an asexual person</title>
 <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
