--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="article-banner">
 	<amp-img
     src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx"
-    srcset="/img/wide.jpg 640w,
-           /img/narrow.jpg 320w"
+    srcset="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx 640w,
+           https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx 320w"
     width="1698"
     height="2911"
     layout="responsive"
@@ -84,8 +84,8 @@
 <p style="font-family: tahoma; text-align: center;"><span style="color: #666666;">
 		<amp-img
     src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx"
-    srcset="/img/wide.jpg 640w,
-           /img/narrow.jpg 320w"
+    srcset="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx 640w,
+           https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx 320w"
     width="1698"
     height="2911"
     layout="responsive"
