--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 </div>
 <!-- AddThis Button END -->
         </div>
-
+<amp-google-vrview-image
+    src="https://storage.googleapis.com/vrview/examples/coral.jpg"
+    stereo
+    width="400" height="300" layout=responsive>
+</amp-google-vrview-image>
         <div class="article-banner">
 	<amp-img
     src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx"
