--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 
+
+
 <!DOCTYPE html>
 <!--[if IE 7]>         <html class="no-js lt-ie10 lt-ie9 lt-ie8 ie7" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie10 lt-ie9 ie8" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if IE 9]>         <html class="no-js lt-ie10 ie9" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml"> <![endif]-->
 <!--[if gt IE 9]><!-->
-<html>
+<html amp lang="en">
 <!--<![endif]-->
 <head><title>
 	The life of an asexual person - Youth.SG
 </title>
 <meta charset="utf-8">
- <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
- <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">  
 <script async src="https://cdn.ampproject.org/v0.js"></script>
+<link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
 <title>The life of an asexual person</title>
 <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
 <meta charset="utf-8">
@@ -55,22 +56,9 @@
 </div>
 <!-- AddThis Button END -->
         </div>
-<amp-google-vrview-image
-    src="https://storage.googleapis.com/vrview/examples/coral.jpg"
-    stereo
-    width="400" height="300" layout=responsive>
-</amp-google-vrview-image>
+
         <div class="article-banner">
-	<amp-img
-    src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx"
-    srcset="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx 640w,
-           https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx 320w"
-    width="1698"
-    height="2911"
-    layout="responsive"
-    alt="an image">
-</amp-img>
-           
+            <img src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-Banner.ashx?h=534&amp;la=en&amp;mw=956&amp;w=800" alt="The-life-of-an-asexual-person" width="800" height="534" />
             <p id="ysgmainplaceholder_0_keywordsArea" itemprop="keywords" class="tags"><a>Opinions</a></p>
         </div>
         
@@ -85,17 +73,8 @@
 <p style="text-align: justify;"><strong><span style="font-family: tahoma; color: #666666;">The most common question: Does asexuality really exist?</span></strong></p>
 <p style="text-align: justify;"><span style="font-family: tahoma; color: #666666;">Although less commonly seen or experienced than heterosexuality, homosexuality or bisexuality, </span><a href="http://www.asexuality.org/" style="font-family: tahoma;">asexuality</a><span style="font-family: tahoma; color: #666666;"> has existed for just as long as the other orientations.</span></p>
 <p style="text-align: justify;"><span style="font-family: tahoma; color: #666666;">Some think that asexuality is an excuse that unappealing people make up to explain why they aren't in a relationship. But it isn't.<br /></span></p>
-<p style="font-family: tahoma; text-align: center;"><span style="color: #666666;">
-		<amp-img
-    src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx"
-    srcset="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx 640w,
-           https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx 320w"
-    width="1698"
-    height="2911"
-    layout="responsive"
-    alt="an image">
-</amp-img>
-	<span style="color: #7f7f7f;">TALK TO THE HAND BECAUSE I AM SINGLE AND I DO NOT WANT TO MINGLE.&nbsp;</span></p>
+<p style="font-family: tahoma; text-align: center;"><span style="color: #666666;"><img height="333" width="500" src="https://www.youth.sg/~/media/YouthSG/The-life-of-an-asexual-person/The-life-of-an-asexual-person-1.ashx?la=en&h=333&w=500" alt="The-life-of-an-asexual-person" style="height: 333px; width: 500px;" /></span><br />
+<span style="color: #7f7f7f;">TALK TO THE HAND BECAUSE I AM SINGLE AND I DO NOT WANT TO MINGLE.&nbsp;</span></p>
 <p style="color: #666666; font-family: tahoma; text-align: left;"><span style="text-align: justify;">I have been asked out by a handful of people before &ndash; some girls, some guys - and made out with some of them too. But I rejected them eventually because I wasn't feeling any attraction towards them.</span></p>
 <p style="color: #666666; font-family: tahoma; text-align: left;"><span style="text-align: justify;">It's not like I didn't try, but I just don't seem to desire </span><em style="text-align: justify;">intimate </em><span style="text-align: justify;">bonds with people.</span></p>
 <p style="color: #666666; font-family: tahoma; text-align: left;"><strong style="text-align: justify; font-family: Tahoma, Arial, sans-serif;"><span style="font-family: tahoma; color: #666666;">So asexual people don't get into relationships?</span></strong></p>
