--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <meta charset="utf-8">
 <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
 <title>The life of an asexual person</title>
+<script async src="https://cdn.ampproject.org/v0.js"></script>	
 <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
 <meta charset="utf-8">
 
