--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <meta name="description" content="" />
 <meta name="keywords" content="" />
+	
 <meta name="viewport" content="width=device-width,initial-scale=1">
+ <script async src="https://cdn.ampproject.org/v0.js"></script>
 <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://ingridaung.github.io/GoogleAMP/">
 </header>
 
